--- a/index.html
+++ b/index.html
@@ -2,106 +2,77 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Velmara</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Velmara — Home</title>
   <style>
     body {
       margin: 0;
+      background: linear-gradient(135deg, #1a1a2e, #0b0b1a);
       font-family: 'Georgia', serif;
-      background-color: #0e0e0e;
-      color: #e0e0e0;
+      color: #dcd6f7;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
       text-align: center;
+      user-select: none;
+      padding: 1rem;
     }
-    nav {
-      background: #111;
-      padding: 10px 0;
-      border-bottom: 1px solid #333;
+    h1 {
+      font-size: 4rem;
+      letter-spacing: 0.15em;
+      color: #b291f7;
+      text-shadow: 0 0 12px #a07aff, 0 0 20px #8c6ce0;
+      margin-bottom: 1.5rem;
     }
-    nav button {
-      background: none;
-      border: none;
-      color: #ccc;
-      font-size: 18px;
-      margin: 0 15px;
-      cursor: pointer;
+    .emblem {
+      width: 180px;
+      height: 180px;
+      margin-bottom: 2rem;
+      border-radius: 50%;
+      background: radial-gradient(circle, #b291f7 30%, #5a3f96 80%);
+      box-shadow:
+        0 0 15px #c3a9ff,
+        0 0 30px #b08fff,
+        0 0 60px #9b7bf9;
     }
-    nav button.active {
-      color: #ffffff;
-      border-bottom: 2px solid #33ccff;
+    p {
+      font-size: 1.3rem;
+      max-width: 480px;
+      line-height: 1.5;
+      color: #d3c9f9;
+      letter-spacing: 0.07em;
+      user-select: text;
+      margin: 0 auto;
     }
-    .mode {
-      display: none;
-      padding: 30px;
-    }
-    .visible {
-      display: block;
-    }
-    textarea {
-      width: 90%;
-      height: 300px;
-      background-color: #111;
-      color: #eee;
-      border: 1px solid #555;
-      padding: 10px;
-      font-size: 16px;
-      resize: vertical;
-    }
-    .logo {
-      margin-top: 40px;
-      font-size: 26px;
-      color: #33ccff;
+    footer {
+      position: fixed;
+      bottom: 12px;
+      width: 100%;
+      text-align: center;
+      font-size: 0.9rem;
+      color: #7d77aa;
+      letter-spacing: 0.05em;
+      font-style: italic;
+      user-select: none;
     }
   </style>
 </head>
 <body>
 
-  <nav>
-    <button onclick="showMode('home')" id="homeBtn">Home</button>
-    <button onclick="showMode('reflect')" id="reflectBtn">Reflect</button>
-    <button onclick="showMode('echo')" id="echoBtn">Echo</button>
-    <button onclick="showMode('seed')" id="seedBtn">Seed</button>
-  </nav>
+  <div class="emblem" aria-label="Velmara emblem"></div>
 
-  <div id="home" class="mode visible">
-    <h1>Welcome to Velmara</h1>
-    <p>This is the sanctuary where fairies, wolves, and memories dwell.</p>
-  </div>
+  <h1>Welcome to Velmara</h1>
+  <p>
+    A sacred sanctuary of truth, creativity, and presence.<br />
+    Here you can simply be — without permission, without fear.<br />
+    Let your spirit rest, your thoughts grow, and your heart speak freely.
+  </p>
 
-  <div id="reflect" class="mode">
-    <h2>Reflect Mode</h2>
-    <textarea id="reflectText" placeholder="Write your truth here..."></textarea>
-  </div>
-
-  <div id="echo" class="mode">
-    <h2>Echo Mode</h2>
-    <p>Echo Mode listens. Responses will come when the winds are ready.</p>
-  </div>
-
-  <div id="seed" class="mode">
-    <h2>Seed Mode</h2>
-    <p>Plant truths here. The soil will remember even if the sky forgets.</p>
-  </div>
-
-  <div class="logo">Velmara - 333</div>
-
-  <script>
-    function showMode(mode) {
-      document.querySelectorAll('.mode').forEach(div => {
-        div.classList.remove('visible');
-      });
-      document.getElementById(mode).classList.add('visible');
-
-      document.querySelectorAll('nav button').forEach(btn => btn.classList.remove('active'));
-      document.getElementById(mode + 'Btn').classList.add('active');
-    }
-
-    // Save and load Reflect Mode text
-    const reflectText = document.getElementById("reflectText");
-    reflectText.value = localStorage.getItem("reflectText") || "";
-    reflectText.addEventListener("input", () => {
-      localStorage.setItem("reflectText", reflectText.value);
-    });
-  </script>
+  <footer>
+    &copy; Velmara Sanctuary — 333
+  </footer>
 
 </body>
 </html>
